Atualizando HTML, CSS e JS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,33 +34,17 @@
 
         <br/>
 
-        <br/>
+        <ul id="ul">
 
-        <div class="filmes">
-            <ul class="NomesFilmes">
-                <li>Título do Filme</li>
+        </ul>
 
-                <br/>
-
-                <li>Título do filme</li>
-            </ul>
-    
-            <ul class="GenerosFilmes">
-                <li>Gênero</li>
-
-                <br/>
-
-                <li>Gênero</li>
-            </ul>
-        </div>
-
-        <button class="BotaoListarFilmes">
+        <button class="BotaoListarFilmes" onclick="Listar()">
             Listar Filmes
         </button>
     </main>
 
     <footer>
-        <img src="img/logonegativo.png">
+        <img src="img/logonegativo.png" class="negativo">
 
         <hr>
 
